# gsia

./: .gitignore  .travis.yml  ChangeLog  Makefile  Makefile.am  NEWS  README.md  configure.ac  hyper.c
src/: Makefile.am  array.c  array.h  comm.c  comm.h  diff.c  error.c  error.h  gsia.c  gsia.h  hyper.c  hyper.h  io.c  io.h  main.c  types.h  utils.c  utils.h
tests/: Makefile.am  check_gsia.h  check_gsia_array.c  check_gsia_comm.c  check_gsia_hyper.c  check_gsia_io.c  check_gsia_main.c  check_gsia_utils.c
